smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/traits/invalid-trait-shape-id-key.smithy
// Syntax error at line 4, column 42: Expected RPAREN(')') but found COLON(':') | Model
namespace smithy.example

@externalDocumentation(smithy.example#foo: "bar")
string MyString
